2009-06-11  David A. Capello  <davidcapello@gmail.com>

	* src/modules/gui.h (JWidgetPtr): Added to automatically delete
	the widget in the destructor.

	* src/modules/gui.cpp (load_widget/get_widgets): In case of error
	now they throw an exception.

	* src/sprite_wrappers.h: CurrentSprite class was split in
	SpriteWrapper/Reader/Writer, and CurrentSpriteReader/Writer
	wrappers.

	* src/console/console.h (Console): Added the class to
	automatically open/close the console (with RAII idiom).

2009-06-10  David A. Capello  <davidcapello@gmail.com>

	* src/modules/palettes.h: Added CurrentSpriteRgbMap class.

2009-06-04  David A. Capello  <davidcapello@gmail.com>

	* src/raster/sprite.h (Sprite): Added m_write_lock and
	m_read_locks members. Added lock(bool) and lock_to_write()
	methods.

2009-06-01  David A. Capello  <davidcapello@gmail.com>

	* src/ase/current_sprite.h (CurrentSprite): Added.

2009-05-31  David A. Capello  <davidcapello@gmail.com>

	* src/file/file.cpp (fop_free): Fixed a mutex-handle leak.

	* src/raster/undo.cpp (update_undo): Fixed a bug where
	the current open-undo-chunk were discarded if the undo-limit
	were reached.

	* src/core/job.cpp: Added Job class to do background jobs more easily.

2009-05-30  David A. Capello  <davidcapello@gmail.com>

	* src/raster/image_impl.h (ImageImpl): Changed the implementation of
	images with templates.

2009-05-20  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_sprite_size.cpp (cmd_sprite_size_execute): Implemented
	feature #2671468: Resize a sprite.

2009-05-17  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_canvas_size.cpp (cmd_canvas_size_execute):
	Added command to change the canvas size.

2009-03-08  David A. Capello  <davidcapello@gmail.com>

	* src/modules/tools.cpp: Now tiled mode can be specified by X
	and/or Y axis (Scott Wilson idea, feature #2636076).

2009-03-07  David A. Capello  <davidcapello@gmail.com>
